<resources>
    <string name="app_name">HelpBoardGameCard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">HelpBoardGameCard</string>
    <string name="nav_header_subtitle">lopatkin.spb@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_tools">Tools</string>
    <string name="text_app_version">App version: %1$s.</string>


    <string name="menu_catalog">Helpcards Catalog</string>
    <string name="menu_edit_card">Edit Helpcard</string>


    <string name="menu_share">Share</string>


    <string name="helpcard_text">Введите текст памятки</string>
    <string name="newCard_title">заметка</string>
    <string name="save">сохранить</string>
    <string name="complited">выполнение</string>
    <string name="_1">1</string>
    <string name="todo">TODO</string>
    <string name="action_delete_all">"Delete all helpcards"</string>
    <string name="action_delete_all_unlock_helpcards">"Delete all unlock helpcards"</string>
    <string name="priority">Priority</string>
    <string name="button_to_record_fragment">Button to record fragment</string>
    <string name="recordFragment">button_to_record_fragment</string>


    <string name="title_addcard">Add New Helpcard</string>
    <string name="title_helpcard_details">Helpcard details</string>
    <string name="title_card_edit">Card edit</string>
    <string name="title_settings">Settings</string>


    <string name="hint_title">title</string>
    <string name="hint_description">description</string>
    <string name="header_victory_condition">Victory condition</string>
    <string name="hint_victory_condition">victory condition</string>
    <string name="header_end_game">End game</string>
    <string name="hint_end_game">end game</string>
    <string name="header_preparation">Preparation</string>
    <string name="hint_preparation">preparation</string>
    <string name="header_player_turn">Player turn</string>
    <string name="hint_player_turn">player turn</string>
    <string name="text_stub">--</string>

    <string name="action_save">Save</string>
    <string name="action_card_save">Card save</string>
    <string name="action_card_edit">Card edit</string>

    <string name="message_helpcard_saved">Helpcard saved</string>
    <string name="message_card_updated">Card updated</string>
    <string name="message_insert_title">Please insert a title</string>

    <string name="message_all_unlock_helpcards_deleted">All unlock helpcards deleted</string>

    <string name="message_helpcard_deleted">Helpcard deleted</string>
    <string name="message_helpcard_not_deleted">Helpcard not deleted</string>

    <string name="message_helpcard_favorite_updated">Helpcard favorite updated</string>
    <string name="message_helpcard_favorite_not_updated">Helpcard favorite not updated</string>

    <string name="message_helpcard_locking_updated">Helpcard locking updated</string>

    <string name="message_delete_all_stopped">Helpcards not deleted because all helpcards lock</string>

    <string name="text_keyboard">Keyboard:</string>

    <string-array name="action_spinner_keyboards">
        <item>Custom</item>
        <item>Default</item>
    </string-array>

    <string name="title_others">OTHERS:</string>

    <string name="message_action_ended_success">Success</string>
    <string name="error_action_ended">Error</string>


</resources>
